--- a/web_dynamic/static/styles/3-header.css
+++ b/web_dynamic/static/styles/3-header.css
@@ -12,3 +12,17 @@ header .logo {
 .available {
     background-color: #ff545f !important; /* Red background when available */
 }
+#api_status {
+  position: absolute; /* Positioned relative to the nearest positioned ancestor (header in this case) */
+  top: 50%; /* Center vertically */
+  right: 30px; /* 30px from the right border */
+  transform: translateY(-50%); /* Adjust vertical position to truly center */
+  width: 40px;
+  height: 40px;
+  background-color: #cccccc; /* Default background color */
+  border-radius: 50%; /* Make it a circle */
+}
+.available {
+  background-color: #ff545f; /* Change background color when class is available */
+}
+
